# example-qa-assessment-python

./: .gitignore  .gitpod.yml  BUGS.md  Dockerfile  README.md  docker-compose-v3.yml  pyproject.toml  qualiti-engineer-test.md  veriff.feature  veriff.py
tests/: test_api.py  test_ui.py
